# BPO

./: .gitattributes  .gitignore  README.md  gpt4_generate_prompt_no_ctx.txt  llm_prompts.py  optimize_prompts.py  prompt_pairs.json  pyproject.toml  requirements.txt  sizeTest.py  training_data_construction.py
data/: gpt4o_optimized_prompts.json  hh_rlhf_prompt_pairs.json  oasst1_prompt_pairs.json
data/evaluation/: bpo_optimized_prompts_bpo_test.json  bpo_optimized_prompts_dolly.json  bpo_optimized_prompts_self_instruct.json  bpo_optimized_prompts_vicuna.json  bpo_test_claude3.5_haiku_opt_responses.json  bpo_test_gemini_opt_responses.json  bpo_test_gpt_3.5_turbo_opt_responses.json  bpo_test_gpt_4o_opt_responses.json  dolly_claude3.5_haiku_opt_responses.json  dolly_gemini_opt_responses.json  dolly_gpt_3.5_turbo_opt_responses.json  dolly_gpt_4o_opt_responses.json  self_instruct_claude3.5_haiku_opt_responses.json  self_instruct_gemini_opt_responses.json  self_instruct_gpt_3.5_turbo_opt_responses.json  self_instruct_gpt_4o_opt_responses.json  vicuna_claude3.5_haiku_opt_responses.json  vicuna_gemini_opt_responses.json  vicuna_gpt_3.5_turbo_opt_responses.json  vicuna_gpt_4o_opt_responses.json
data/raw_llm_output/: optimized_prompts.json
evaluation/: dolly_eval_opt.json  dolly_eval_seq2seq.json  evaluation.py  generate_responses.py  optimize_prompt_template.txt  prompt_template.txt  system_prompt.txt
generate_data/: calculate_costs.py  optimize_prompts.py  training_data_construction.py
infer/: inference.py
train/: preprocess.py  size_test.py  submit.slurm  train.py
(+1 files in other folders)
